<resources>
    <string name="app_name">Simple Drawing Program</string>

    <string name="clear">Clear</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>

</resources>