<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_open_in_new_24"
        android:contentDescription="@string/clear"
        android:onClick="clear"
        tools:ignore="MissingConstraints"
        />

    <ImageButton
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/load"
        android:onClick="load"
        app:layout_constraintBottom_toTopOf="@+id/paintingView"
        app:srcCompat="@drawable/ic_baseline_file_open_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_save_24"
        android:contentDescription="@string/save"
        android:onClick="save"
        tools:ignore="MissingConstraints"
        />

    <ImageButton
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_undo_24"
        android:contentDescription="@string/undo"
        android:onClick="undo"
        tools:ignore="MissingConstraints"
        />

    <ImageButton
        android:id="@+id/redoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_redo_24"
        android:contentDescription="@string/redo"
        android:onClick="redo"
        tools:ignore="MissingConstraints"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/top_menu"
        android:orientation="horizontal"
        app:flow_firstHorizontalStyle="packed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:constraint_referenced_ids="clearButton,loadButton,saveButton,undoButton,redoButton"/>

    <com.cormontia.android.simpledrawingprogram.PaintingView
        android:id="@+id/paintingView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/top_menu"
        app:layout_constraintBottom_toTopOf="@id/palette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/palette"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/paintingView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/red"
            android:id="@+id/red"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/orange"
            android:id="@+id/orange"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/yellow"
            android:id="@+id/yellow"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/green"
            android:id="@+id/green"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/blue"
            android:id="@+id/blue"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/indigo"
            android:id="@+id/indigo"
            android:onClick="colorSelected"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/violet"
            android:id="@+id/violet"
            android:onClick="colorSelected"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>